fixed extra margin

--- a/src/partials/_content.scss
+++ b/src/partials/_content.scss
@@ -30,6 +30,7 @@
     .secondary-banners {
         padding-top: 10px;
         padding-bottom: 10px;
+        overflow: hidden;
 
         .left-banner-container, .right-banner-container {
             padding: 0 5px;
